# rinertia

./: .gitignore  Cargo.toml  README.md  install.sh
src/: config.rs  decision_log.rs  device_discovery.rs  instance_lock.rs  main.rs  momentum.rs  touchpad.rs  virtual_device.rs  x11_pointer.rs
