[package]
name = "rinertia"
version = "0.3.0"
edition = "2024"
description = "Pointer inertia daemon for Linux touchpads"
license = "MIT"
keywords = ["touchpad", "inertia", "pointer", "evdev", "uinput"]

[dependencies]
evdev = "0.12"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
libc = "0.2"
nix = { version = "0.29", features = ["ioctl"] }
x11rb = "0.13.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
